[package]
name = "kusa-rs"
version = "0.2.0"
authors = ["S <logsig@logsig.com>"]
edition = "2018"
description = "A High performance IoT Server"
readme = "README.md"
homepage = "https://github.com/logsig/kusa-rs"
repository = "https://github.com/logsig/kusa-rs"
documentation = "https://github.comf/logsig/kusa-rs/docs"
keywords = ["mqtt", "pubsub", "broker", "iot", "server", "codec"]
categories = ["server", "network-programming", "async"]
license = "MIT"


[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.6", features = ["full"] }
tokio-stream = {version = "0.1.5" }
log = "*"